RESOLVED FIXED137921
[GTK]: Fix unused parameter build warnings in WebCore/platform module
https://bugs.webkit.org/show_bug.cgi?id=137921
Summary [GTK]: Fix unused parameter build warnings in WebCore/platform module
Rohit
Reported 2014-10-21 07:04:26 PDT
Remove following build warning in WebKit GTK build [192/4427] Building CXX object Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/dfg/DFGCommon.cpp.o [2493/4427] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/platform/ScrollAnimatorNone.cpp.o ../../Source/WebCore/platform/ScrollAnimatorNone.cpp:199:1: warning: unused parameter ‘parent’ [-Wunused-parameter] ScrollAnimatorNone::PerAxisData::PerAxisData(ScrollAnimatorNone* parent, float* currentPosition, int visibleLength) ^ ../../Source/WebCore/platform/ScrollAnimatorNone.cpp:494:6: warning: unused parameter ‘timer’ [-Wunused-parameter] void ScrollAnimatorNone::animationTimerFired(Timer<ScrollAnimatorNone>* timer) ^ [2555/4427] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/platform/graphics/cairo/CairoUtilities.cpp.o
Attachments
Patch (1.87 KB, patch)
2014-10-21 07:07 PDT, Rohit
no flags
Patch for landing (1.79 KB, patch)
2014-10-22 02:15 PDT, Rohit
no flags
Rohit
Comment 1 2014-10-21 07:07:54 PDT
WebKit Commit Bot
Comment 2 2014-10-21 07:10:31 PDT
Attachment 240200 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Carlos Garcia Campos
Comment 3 2014-10-22 00:27:55 PDT
Comment on attachment 240200 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=240200&action=review > Source/WebCore/ChangeLog:8 > + No new tests (OOPS!). You should remove this line
Rohit
Comment 4 2014-10-22 02:15:09 PDT
Created attachment 240258 [details] Patch for landing
WebKit Commit Bot
Comment 5 2014-10-22 03:12:01 PDT
Comment on attachment 240258 [details] Patch for landing Clearing flags on attachment: 240258 Committed r175037: <http://trac.webkit.org/changeset/175037>
WebKit Commit Bot
Comment 6 2014-10-22 03:12:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.