[GTK]: Fix unused parameter build warnings in WebCore/platform module https://bugs.webkit.org/show_bug.cgi?id=137921

Patch by Rohit Kumar <kumar.rohit@samsung.com> on 2014-10-22
Reviewed by Carlos Garcia Campos.

* platform/ScrollAnimatorNone.cpp:
(WebCore::ScrollAnimatorNone::PerAxisData::PerAxisData):
(WebCore::ScrollAnimatorNone::animationTimerFired):

Canonical link: https://commits.webkit.org/155817@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175037 268f45cc-cd09-0410-ab3c-d52691b4dbfc